Fixed menu misalignment on desktop when the font was changed.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -81,11 +81,11 @@
 }
 
 .products-menu-large {
-    margin-left: 212.72px;
+    margin-left: 196px;
 }
 
 .account-menu-large {
-    margin-left: 362.42px;
+    margin-left: 327px;
 }
 
 .dropdown-item {
